test/compilable/test12567d.d
// REQUIRED_ARGS: -d
// EXTRA_FILES: imports/a12567.d
// PERMUTE_ARGS:
/*
TEST_OUTPUT:
---
---
*/
import imports.a12567;

void main() { foo(); }
